istio_lab/hostname-virtualservice-v2.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hostname
spec:
  hosts:
  - "hostname.example.com"
  gateways:
  - hostname-gateway
  http:
  - match:
    - headers:
        cookie:
          regex: "^(.*?;)?(user=test)(;.*)?$"
    route:
    - destination:
        port:
          number: 80
        host: hostname
        subset: v2
  - route:
    - destination:
        port:
          number: 80
        host: hostname
        subset: v1
